# crispy-forms-foundation

./: .gitignore  .readthedocs.yml  CHANGELOG.rst  LICENCE.txt  MANIFEST.in  Makefile  README.rst  freezer.py  frozen.txt  manage.py  pytest.ini  setup.cfg  setup.py  sphinx_reload.py  tox.ini
crispy_forms_foundation/: __init__.py  forms.py  layout.py  settings.py  urls.py  views.py
crispy_forms_foundation/layout/: __init__.py  base.py  buttons.py  containers.py  fields.py  forms.py  grid.py
crispy_forms_foundation/locale/de/LC_MESSAGES/: django.mo  django.po
crispy_forms_foundation/locale/fr/LC_MESSAGES/: django.mo  django.po
crispy_forms_foundation/static/js/crispy_forms_foundation/: plugins.js
crispy_forms_foundation/templates/crispy_forms_foundation/: sample.html
crispy_forms_foundation/templates/foundation/: display_form.html  errors.html  errors_formset.html  field.html  field.strict.html  uni_form.html  uni_formset.html  whole_uni_form.html  whole_uni_formset.html
crispy_forms_foundation/templates/foundation-3/: betterform.html  display_form.html  errors.html  field.html  field.strict.html  uni_form.html  uni_formset.html  whole_uni_form.html  whole_uni_formset.html
crispy_forms_foundation/templates/foundation-3/layout/: baseinput.html  buttonholder.html  inline_field.html  splitdatetime_field.html
crispy_forms_foundation/templates/foundation-5/: betterform.html  errors.html  errors_formset.html  field.html  field.strict.html  inline_switch.html  multifield.html  switch.html  uni_form.html  uni_formset.html  whole_uni_form.html  whole_uni_formset.html
crispy_forms_foundation/templates/foundation-5/layout/: accordion-group.html  accordion-holder.html  accordion-item.html  basebutton.html  baseinput.html  buttongroup.html  buttonholder.html  checkboxselectmultiple.html  fieldset.html  inline_field.html  multifield.html  splitdatetime_field.html  tab-holder.html  tab-item.html  tab-link.html
crispy_forms_foundation/templates/foundation-6/: betterform.html  display_form.html  errors.html  errors_formset.html  field.html  field.strict.html  inline_switch.html  multifield.html  switch.html  uni_form.html  uni_formset.html  whole_uni_form.html  whole_uni_formset.html
crispy_forms_foundation/templates/foundation-6/layout/: accordion-holder.html  accordion-item.html  basebutton.html  buttongroup.html  div.html  fieldset.html  inline_field.html  splitdatetime_field.html  tab-holder.html  tab-item.html  tab-link.html
crispy_forms_foundation/templates/foundation/layout/: buttonholder.html  checkboxselectmultiple.html  multifield.html  splitdatetime_field.html
crispy_forms_foundation/templatetags/: crispy_forms_foundation_field.py
docs/: Makefile  abide.rst  changelog.rst  conf.py  credits.rst  development.rst  dummy_settings.py  form_objects.rst  history.rst  index.rst  install.rst  layout.rst  requirements.txt  settings.rst  sphinx_reload.py  usage.rst
docs/_static/css/: furo-adjustments.css
docs/layout/: base.rst  buttons.rst  containers.rst  fields.rst  grid.rst
project_test/: db.sqlite3  pytest.ini
project_test/project/: settings.py  settings_django19.py  urls.py  wsgi.py
project_test/project/demo/: __init__.py  crispies.py  forms.py  urls.py  views.py
project_test/project/demo/templates/: homepage.html  skeleton.html
project_test/project/demo/templates/crispy_demo/: accordions.html  base_forms.html  index.html  tabs.html
project_test/project/demo/templates/crispy_demo/assets/: foundation5_footer_assets.html  foundation6_footer_assets.html  foundation6_header_assets.html
project_test/project/settings/: base.py  development.py
project_test/project/templates/: homepage.html  skeleton.html
project_test/tests/: 001_ping_demo.py  002_layout.py  003_fields.py  004_buttons.py  005_containers.py  conftest.py  forms.py  test_002_basic_form.py  utils.py
project_test/tests/output/: test_accordion.html  test_advanced.html  test_inlinefield.html  test_inlineswitchfield.html  test_tab.html
project_test/tests/output/foundation-5/: test_accordion.html  test_advanced.html  test_basic.html  test_buttongroup.html  test_inlinefield.html  test_inlineswitchfield.html  test_tab.html
project_test/tests/output/foundation-6/: test_accordion.html  test_advanced.html  test_basic.html  test_buttonelement.html  test_buttongroup.html  test_inlineswitchfield.html  test_layout.html  test_tab.html
requirements/: dev.txt  tests.txt
sandbox/: manage.py  urls.py  wsgi.py
sandbox/demo/: __init__.py  crispies.py  forms.py  urls.py  views.py
sandbox/demo/templates/: homepage.html
sandbox/demo/templates/crispy_demo/: base_forms.html  fieldsets.html  index.html  success.html  tabs.html
sandbox/demo/templates/crispy_demo/assets/: foundation5_header_assets.html
sandbox/settings/: base.py  demo.py  documentation.py  tests.py
tests/: 001_ping_demo.py  002_layout.py  003_fields.py  004_buttons.py  005_containers.py  conftest.py  forms.py  utils.py
tests/output/foundation-5/: test_accordion.html  test_advanced.html  test_basic.html  test_buttongroup.html  test_fakefield.html  test_tab.html
tests/output/foundation-6/: test_accordion.html  test_advanced.html  test_basic.html  test_buttonelement.html  test_buttongroup.html  test_fakefield.html  test_inlinefield.html  test_inlineswitchfield.html  test_layout.html  test_tab.html
