;;
;; crispy-forms-foundation package
;;
[metadata]
name = crispy-forms-foundation
version = 0.8.0-pre.1
description = Django application to add 'django-crispy-forms' layout objects for 'Foundation for sites'
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/crispy-forms-foundation
license = MIT
keywords = Django, django-crispy-forms, foundation-site
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    Django>=2.0
    django-crispy-forms>=1.8.1
packages = find:
zip_safe = True

[options.extras_require]
dev =
    flake8
    pytest
    pytest-django
    sphinx
    sphinx-rtd-theme
    sphinx-autobuild
    django-debug-toolbar

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 80
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
envlist = py{36}-django{200,210,220,300}
minversion = 3.4.0

[testenv]
# Get the right django version following the current env
deps =
    django200: Django>=2.0,<2.1
    django210: Django>=2.1,<2.2
    django220: Django>=2.2,<2.3
    django300: Django>=3.0,<3.1
    django200,django210: django-crispy-forms>=1.8.0,<1.9.0
    django220,django300: django-crispy-forms>=1.9.0,<2.0.0

commands =
    pip install -e .[dev]
    pytest -vv tests
