;;
;; crispy-forms-foundation package
;;
[metadata]
name = crispy-forms-foundation
version = 1.0.1
description = Django application to add 'django-crispy-forms' layout objects for 'Foundation for sites'
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/crispy-forms-foundation
license = MIT
keywords = Django, django-crispy-forms, foundation-site
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
install_requires =
    Django>=3.2
    django-crispy-forms>=2.0
packages = find:
zip_safe = True

[options.extras_require]
test =
    pytest
    pytest-django
dev =
    django-debug-toolbar
quality =
    flake8
    twine
    tox
doc =
    sphinx
    sphinx-rtd-theme
    livereload

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
envlist = py{38,310,311}-django{320,400,420}
minversion = 3.4.0

[testenv]
# Get the right django version following the current env
deps =
    django320: Django>=3.2,<4.0
    django400: Django>=4.0,<4.1
    django410: Django>=4.1,<4.2
    django420: Django>=4.2,<4.3

commands =
    pip install -e .[test]
    pytest -vv tests
